2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c (DUMP_OR_RET): New macro.
	(as_lookup_rel): On a likely user error, print a trace.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* as.h: Include <hurd/exceptions.h>.
	[! RM_INTERN]: Include <hurd/storage.h> and <pthread.h>.
	(as_lock_ensure_stack) [! RM_INTERN]: New function.
	(as_lock): New function.
	(as_lock_readonly): Likewise.
	(as_unlock): Likewise.
	(meta_data_activity) [RM_INTERN]: Don't declare.
	(shadow_root) [RM_INTERN]: Don't declare.
	(struct as_insert_rt): Rename from this...
	(struct as_allocate_pt_ret): ... to this.  Update users.
	(as_allocate_page_table_t): New typedef.
	(as_allocate_page_table): New declaration.
	(as_build): New declaration.
	(as_build_custom): Likewise.
	(as_slot_ensure): Remove declaration.
	(as_ensure_full): New macro.
	(as_ensure_use) [! RM_INTERN]: Likewise.
	(as_ensure) [! RM_INTERN]: New function.
	(as_insert): Rename from this...
	(as_insert_full): ... to this.  Don't return the capability.
	Reverse the order of the source address and cap.  Replace
	allocate_object parameter with an allocate_page_table parameter.
	Update users.
	(as_insert) [! RM_INTERN]: New function.
	(as_slot_ensure_full_custom): Rename from this...
	(as_ensure_full_custom): ... to this.  Replace allocate_object
	parameter with an allocate_page_table parameter.
	(as_insert_custom): Likewise.
	(union as_lookup_ret): New definition.
	(as_lookup_want_cap): New definition.
	(as_lookup_want_slot): Likewise.
	(as_lookup_want_object): Likewise.
	(as_lookup_rel): New declaration.
	(slot_lookup): Remove declaration.
	(as_slot_lookup_rel_use): Replace it with this macro.
	(as_slot_lookup_use) [! RM_INTERN]: New macro.
	(as_cap_lookup_rel): New function.
	(cap_lookup): Rename from this...
	(as_cap_lookup) [! RM_INTERN]: ... to this.  Remove activity
	parameter.  Implement here as a static inline function.
	(as_object_lookup_rel): New function.
	(object_lookup): Rename from this...